--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
 
     <!-- Thumbnail image/gif -->
-    <meta property="og:image" content="https://raw.githubusercontent.com/happydance2/happy-site/main/media/happydance.gif">
+    <meta property="og:image" content="https://raw.githubusercontent.com/happydance2/happy-site/main/media/animething.gif">
     <meta property="og:type" content="video.other">
     
     <!-- Video Link -->
@@ -16,7 +16,7 @@
     <!-- Stole the memes from https://github.com/iwakkrg/iwakkrg.github.io -->
     
     <!-- Redirect -->
-    <meta http-equiv="refresh" content="0; url=https://www.youtube.com/@ConezGT" />
+    <meta http-equiv="refresh" content="0; url=https://www.youtube.com/@Lauro_GT" />
   </head>
   <body>
   </body>
